<resources>
    <string name="app_name">看美图</string>
    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <!--    <string name="media_url_mp4">https://media.w3.org/2010/05/sintel/trailer.mp4</string>-->
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_mp41">https://media.w3.org/2010/05/sintel/trailer.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="str_title_home">首页</string>
    <string name="str_title_publish">发布</string>
    <string name="str_title_image">美图</string>
    <string name="str_title_mine">我的</string>
    <string name="str_close">关闭</string>
    <string name="str_phone_login">手机号登陆</string>
    <string name="str_phone">手机号</string>
    <string name="str_input_phone">请填写手机号</string>
    <string name="str_next_step">下一步</string>
    <string name="str_check_code">验证码</string>
    <string name="str_input_check_code">请填写验证码</string>
    <string name="str_btn_check_code">获取验证码</string>
    <string name="str_dialog_btn_cancel">取消</string>
    <string name="str_dialog_btn_ok">确认</string>
    <string name="str_title_check_phone">确认手机号</string>
    <string name="str_title_check_phone_content">我们将发送验证码短信到这个号码\n%s</string>
    <string name="str_fail_get_check_code">获取验证码失败！</string>
    <string name="str_loading">加载中…</string>
    <string name="str_title_introduce">推荐</string>
    <string name="str_title_video">视频</string>
    <string name="str_tiitle_picture">美图</string>
    <string name="str_title_else">其他</string>
    <string name="str_share">分享</string>
    <string name="str_comment">评论</string>
    <string name="str_like">喜欢</string>
    <string name="str_header">头像</string>


</resources>
