<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:icon="@drawable/ic_menu_home"
            android:orderInCategory="100"
            android:title="@string/str_title_home" />
    <item
            android:icon="@android:drawable/ic_menu_add"
            android:orderInCategory="100"
            android:title="@string/str_title_publish" />
    <item
            android:icon="@android:drawable/ic_menu_report_image"
            android:orderInCategory="100"
            android:title="@string/str_title_image" />
    <item
            android:icon="@android:drawable/ic_menu_myplaces"
            android:orderInCategory="100"
            android:title="@string/str_title_mine" />
</menu>