<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/shareView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_share"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@id/commentView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/str_share" />

    <TextView
            android:id="@+id/shareTextView"
            style="@style/textStyleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_share"
            app:layout_constraintEnd_toStartOf="@id/shareView"
            app:layout_constraintBottom_toBottomOf="@id/shareView"
            app:layout_constraintTop_toTopOf="@id/shareView" />

    <ImageView
            android:id="@+id/commentView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_comment"
            app:layout_constraintEnd_toStartOf="@id/likeView"
            app:layout_constraintStart_toEndOf="@id/shareView"
            app:layout_constraintTop_toTopOf="@id/shareView"
            android:contentDescription="@string/str_comment" />

    <TextView
            android:id="@+id/commentTextView"
            style="@style/textStyleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_comment"
            app:layout_constraintBottom_toBottomOf="@id/commentView"
            app:layout_constraintStart_toEndOf="@id/commentView"
            app:layout_constraintTop_toTopOf="@id/commentView" />

    <ImageView
            android:id="@+id/likeView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/commentView"
            app:layout_constraintTop_toTopOf="@id/shareView"
            android:contentDescription="@string/str_like" />

    <TextView
            android:id="@+id/likeTextView"
            style="@style/textStyleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_like"
            app:layout_constraintBottom_toBottomOf="@id/likeView"
            app:layout_constraintStart_toEndOf="@id/likeView"
            app:layout_constraintTop_toTopOf="@id/likeView" />

</androidx.constraintlayout.widget.ConstraintLayout>